--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 
 	<properties>
 		<slf4j.api.version>1.7.5</slf4j.api.version>
+		<commons-io.version>2.8.0</commons-io.version>
+		<spring.framework.version>5.3.4</spring.framework.version>
 	</properties>
 
 
@@ -67,6 +69,22 @@
 			<artifactId>gson</artifactId>
 			<!-- <version>2.8.5</version> -->
 		</dependency>
+		
+		<dependency>
+		  <groupId>commons-io</groupId>
+		  <artifactId>commons-io</artifactId>
+		  <version>${commons-io.version}</version>
+		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency> 
 	</dependencies>
 
 
