--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,23 @@ debug: true
 server:
   port: 8090
   servlet: 
-    context-path: /SpringFunction
+    context-path: /spring-demo
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/db_system?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: qds553446792
-    max-idle: 10
-    min-idle: 5
+    main:
+      url: jdbc:mysql://localhost:3306/db_system?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      username: root
+      password: qds553446792
+      max-idle: 10
+      min-idle: 5
+    mqtt:
+      url: jdbc:mysql://localhost:3306/db_user?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      username: root
+      password: qds553446792
+      max-idle: 10
+      min-idle: 5
   output:
     ansi: 
       enabled: detect
